# portfolio

./: .gitignore  :w  CNAME  README 2.md  README.md  \  cypress.config.ts  package-lock.json  package.json  pb_schema.json  pull_and_build.sh  setup.sh  svelte.config.js  tailwind.config.cjs  tsconfig.json  vite.config.ts
.svelte-kit/: ambient.d.ts  non-ambient.d.ts  tsconfig.json
pb_hooks/: noteWebQueries.pb.js
proto/: api_error.proto  state.proto
server/: app.py  initDatabase.py  kill_and_exec.sh  readme.md  requirements.txt  sendEmail.sh  start.sh
server/v3.rust/: Cargo.toml  diesel.toml  readme.md
server/v3.rust/src/: createRandomBioStr.rs  main.rs
server/v3.rust/src/db/schema/: models.rs
server/v3.rust/src/diesel/schema/: insertables.rs  models.rs
server/v3.rust/src/routes/cms/: aboutPage.rs  contactPage.rs  fuelpricesPage.rs  homePage.rs  jssimulatorPage.rs  minesweeperPage.rs  mrnaPage.rs  projectsPage.rs  propertyPage.rs  randombioPage.rs  secondaryPage.rs  seqalignPage.rs  siteanalysisPage.rs  tictactoePage.rs
server/v3.rust/src/routes/forum/: index.rs  login.rs  logout.rs  register.rs
server/v3.rust/src/routes/index/: about.rs  capture.rs  contact.rs  index.rs  monitor.rs
server/v3.rust/src/routes/projects/: fuelprices.rs  index.rs  mrna.rs  randombio.rs  secondary.rs  seqalign.rs
server/v3.rust/src/types/: auth.rs  cms.rs  jsonContent.rs  mrna.rs  response.rs
server/v3.rust/src/utils/: discordLogging.rs  dotenv.rs
src/: app.html  app.pcss
ui.react/: .gitignore  .prettierrc.js  .prettierrc.json  ]  babel.config.js  package-lock.json  (+6 more)
(+867 files in other folders)
