[package]
name = "rust-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.11"
rand = "0.8.4"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "^1.0.8"

[dependencies.rocket_contrib]
version = "0.4.10"
default-features = false
features = ["json"]
