[package]
name = "rust-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0"
diesel = { version = "2.0.0", features = ["sqlite"] }
dotenvy = "0.15"
chrono = "0.2"
reqwest = { version = "0.11", features = ["blocking"] }
sqlx = { version = "0.6.2", features = ["runtime-tokio-native-tls", "sqlite"]}
tokio = { version = "1.20.0", features = ["macros"]}
ring = "0.16.20"
base64 = "0.21.0"
